syntax = "proto3";

package fob; // declaring the correct package is important, because it'll be in that package that the autogenerated files till be



option java_package = "com.proto.prescription";

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";


message PharmacyPrescriptionRequest {
  string patient_first_name = 1;
  string patient_last_name = 2;
  string patient_address = 3;
  string prescriber_name = 4;
  int32 prescription_id = 5;
  string medication_name = 6;
  google.protobuf.Timestamp prescription_date = 7;
  string dosage = 8;
  Target target_type = 9;
  int32 pharmacy_id = 10;

}

enum Target {
  PHARMACY = 0;
  PATIENT_QR = 1;
}

message PharmacyPrescriptionResponse {
  string patient_first_name = 1;
  string patient_last_name = 2;
  string patient_address = 3;
  string prescriber_name = 4;
  int32 prescription_id = 5;
  string medication_name = 6;
  google.protobuf.Timestamp prescription_date = 7;
  string dosage = 8;
  Target target_type = 9;
  int32 pharmacy_id = 10;
}

service PrescriptionService {
  rpc ServerStreamingRPC (stream PharmacyPrescriptionRequest) returns (stream PharmacyPrescriptionResponse);
}